--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
                       Acumulamos mais de 10 anos no mercado
                     </h1>
                     <p class="fs-5 text-body mb-5" align="justify">
-                      Acreditamos na educação como o pilar para um desenvolvimento mais sustentável, através dos nossos projetos
+                      (Teste) Acreditamos na educação como o pilar para um desenvolvimento mais sustentável, através dos nossos projetos
                       influênciamos no processo de ensino aprendizagem dos jovens de uma forma mais lúdica e tecnológica, trazendo 
                       sempre soluções inteligentes para quem precisa potencializar a qualidade e os índices da educação nas redes e sistemas de ensino.
                     </p>
