Modificações para correções ortográficas.

--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
                 Saiba mais sobre a Feeling
               </h1>
               <h4 align="justify" style="color: #FFFFFF">
-                Conheça um pouco de quem somos e o que fazemos para transformar a educação no pais!
+                Conheça um pouco de quem somos e o que fazemos para transformar a educação no país!
               </h4>
               <div style="padding-top: 2rem;">
                 <center>
@@ -335,7 +335,7 @@
           <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s">
             
             <p class="mb-4" align="justify">
-              A baixo você poderá conhecer um pouco mais dos nossos projetos e ter acesso ao material gráfico de cada um deles. Além disso, poderá acompanhar de perto nossosregistros de entrega e formação dos professores, através de fotos e videos que serão alimentados periodicamente.
+            Abaixo você poderá conhecer um pouco mais dos nossos projetos e ter acesso ao material gráfico de cada um deles. Além disso, é possível acompanhar de perto nossos registros de entrega e formação dos professores através de fotos e vídeos que serão alimentados periodicamente.
             </p>
             <div class="row g-3">
               <div class="col-sm-6 wow fadeIn" data-wow-delay="0.1s">
@@ -362,7 +362,7 @@
                       src="img/icon/Projetos.jpg"
                       alt=""
                     />
-                    <h5 class="mb-0">Projetos Pedagogicos</h5>
+                    <h5 class="mb-0">Projetos Pedagógicos</h5>
                   </div>
                 </div>
               </div>
@@ -427,7 +427,7 @@
                     </h1>
 
                     <p class="text-white mb-5">
-                      Através do mapa fica facil localizar o nosso representante mais perto de você, clicando na região que deseja você terá de forma rapida todos os dados necessarios para contacta-lo.
+                      Através do mapa fica fácil localizar o nosso representante mais perto de você, clicando na região que deseja você terá de forma simplificada todos os dados necessários para entrar em contato com um deles.
                     </p>
 
                     <div style="justify-content: center; align-items: center; display: flex;">
