Correção de erros ortográfcos

--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
             <div class="h-100 px-4 ps-lg-0">
               <h1 class="mb-4" style="color: #3B5489;">Buscamos no resultado a excelência!</h1>
               <p class="mb-5" align="justify" style="color: #3B5489;">
-                Espalhados pelos Brasil nossa equipe carrega no peito uma grande responsabilidade, oferecer as melhores soluções pedagogicas para o desenvolvimento de uma educação de qualidade.
+                Espalhados pelos Brasil, nossa equipe carrega uma grande responsabilidade no peito, oferecer as melhores soluções pedagógicas para o desenvolvimento de uma educação de qualidade.
               </p>
             </div>
           </div>
