--- a/about.html
+++ b/about.html
@@ -201,23 +201,7 @@
               </p> 
 
               <p style="font-size: 1.2rem;" class="mb-4" Align="justify">
-                Somos uma distribuidora que atua no campo
-                educacional fornecendo projetos pedagógicos,
-                sendo o nosso maior foco atender secretarias
-                municipais e estaduais de educação, assim como
-                a rede privada de ensino, atuando em todos os
-                estados da federação. Trabalhamos com os mais
-                diversos tipos de programas educacionais e
-                laboratórios , navegando entre soluções
-                tecnológicas, inclusivas e inteligentes, garantindo
-                potencializar o processo de ensino aprendizagem
-                nas redes e sistemas educacionais. A FEELING
-                COMÉRCIO E SERVIÇOS LTDA já acumúla mais de
-                10 anos no mercado, e possuímos diversos
-                representantes espalhados pelo Brasil, juntos,
-                buscamos fazer a diferença, aprendendo com o
-                passado, influenciando no presente para garantir
-                o futuro da educação do nosso país.
+                Somos uma distribuidora que atua no campo educacional fornecendo projetos pedagógicos, sendo o nosso maior foco atender secretarias municipais e estaduais de educação, assim como a rede privada de ensino, atuando em todos os estados da federação. Trabalhamos com os mais diversos tipos de programas educacionais e laboratórios, navegando entre soluções tecnológicas, inclusivas e inteligentes, garantindo potencializar o processo de ensino aprendizagem nas redes e sistemas educacionais. A FEELING COMÉRCIO E SERVIÇOS LTDA já acumula mais de 10 anos no mercado, e possuímos diversos representantes espalhados pelo Brasil, juntos, buscamos fazer a diferença, aprendendo com o passado, influenciando no presente para garantir o futuro da educação do nosso país.
               </p>
             </div>
           </div>
@@ -233,19 +217,7 @@
                 Missão
               </p> 
               <p style="font-size: 1.2rem;" class="mb-4" Align="justify">
-                Oferecer ferramentas pedagógicas que
-                garantam o acesso a uma educação
-                inclusiva e de qualidade, pautada no
-                respeito, na ética e na responsabilidade
-                social, utilizando da interdisciplinaridade,
-                aliada a tecnologia, dedicando-se a
-                aquisição dos objetivos de aprendizagem,
-                habilidades, e competências previstas no
-                Currículo Referência Nacional nos termos
-                da legislação vigente, valorizando a
-                d i v e r s i d a d e e o s O b j e t i v o s d e
-                Desenvolvimento Sustentável propostos
-                pela ONU.
+                Oferecer ferramentas pedagógicas que garantam o acesso a uma educação inclusiva e de qualidade, pautada no respeito, na ética e na responsabilidade social, utilizando da interdisciplinaridade, aliada a tecnologia, dedicando-se a aquisição dos objetivos de aprendizagem, habilidades, e competências previstas no Currículo Referência Nacional nos termos da legislação vigente, valorizando adversidade e os Objetivos de Desenvolvimento Sustentável propostos pela ONU.
               </p>
             </div>
           </div>
