--- a/about.html
+++ b/about.html
@@ -217,7 +217,7 @@
                 Missão
               </p> 
               <p style="font-size: 1.2rem;" class="mb-4" Align="justify">
-                Oferecer ferramentas pedagógicas que garantam o acesso a uma educação inclusiva e de qualidade, pautada no respeito, na ética e na responsabilidade social, utilizando da interdisciplinaridade, aliada a tecnologia, dedicando-se a aquisição dos objetivos de aprendizagem, habilidades, e competências previstas no Currículo Referência Nacional nos termos da legislação vigente, valorizando adversidade e os Objetivos de Desenvolvimento Sustentável propostos pela ONU.
+                Oferecer ferramentas pedagógicas que garantam o acesso a uma educação inclusiva e de qualidade, pautada no respeito, na ética e na responsabilidade social, utilizando da interdisciplinaridade, aliada a tecnologia, dedicando-se a aquisição dos objetivos de aprendizagem, habilidades, e competências previstas no Currículo Referência Nacional nos termos da legislação vigente, valorizando a diversidade e os Objetivos de Desenvolvimento Sustentável propostos pela ONU.
               </p>
             </div>
           </div>
