Correção para exibir as imagens corretamente no site

--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
             >
               <img
                 class="position-absolute w-100 h-100"
-                src="img/saibamais.JPG"
+                src="img/saibamais.jpg"
                 alt=""
                 style="object-fit: cover"/>
             </div>
