--- a/labs.html
+++ b/labs.html
@@ -180,7 +180,7 @@
       data-wow-delay="0.1s", style="display: flex; flex-direction: row; padding-bottom: 1.5rem;"
     >
       <div class="card" style="margin-left: 1.5%; width: 18rem;">
-        <img class="card-img-top" src="img/robotica.JPG" alt="Card image cap">
+        <img class="card-img-top" src="img/robotica.jpg" alt="Card image cap">
           <div class="card-body">
             <h5 class="card-title" style="text-align: center;">Robótica</h5>
           </div>
@@ -190,7 +190,7 @@
       </div> 
 
       <div class="card" style="margin-left: 1.5%; width: 18rem;">
-        <img class="card-img-top" src="img/matematica.JPG" alt="Card image cap">
+        <img class="card-img-top" src="img/matematica.jpg" alt="Card image cap">
           <div class="card-body">
             <h5 class="card-title" style="text-align: center;">Matemática</h5> 
           </div>
@@ -200,7 +200,7 @@
       </div>
 
       <div class="card" style="margin-left: 1.5%; width: 18rem;">
-        <img class="card-img-top" src="img/ciencias.JPG" alt="Card image cap">
+        <img class="card-img-top" src="img/ciencias.jpg" alt="Card image cap">
           <div class="card-body">
             <h5 class="card-title" style="text-align: center;">Ciências</h5> 
           </div>
@@ -210,7 +210,7 @@
       </div>
 
       <div class="card" style="margin-left: 1.5%; width: 18rem;">
-        <img class="card-img-top" src="img/inclusaosocial.JPG" alt="Card image cap">
+        <img class="card-img-top" src="img/inclusaosocial.jpg" alt="Card image cap">
           <div class="card-body">
             <h5 class="card-title" style="text-align: center;">Inclusão Social</h5> 
           </div>
@@ -220,7 +220,7 @@
       </div>
 
       <div class="card" style="margin-left: 1.5%; width: 18rem;">
-        <img class="card-img-top" src="img/3d.JPG" alt="Card image cap">
+        <img class="card-img-top" src="img/3d.jpg" alt="Card image cap">
           <div class="card-body">
             <h5 class="card-title" style="text-align: center;">Ensino em 3D</h5> 
           </div>
