--- a/projs.html
+++ b/projs.html
@@ -181,7 +181,7 @@
     >
       <div class="col-sm-12" style="display: flex; flex-direction: row; justify-content: space-around; padding-bottom: 3%;">
         <div class="card" style="width: 18rem;">
-          <img class="card-img-top" src="img/tendadacultura.JPG" alt="Card image cap">
+          <img class="card-img-top" src="img/tendadacultura.jpg" alt="Card image cap">
             <div class="card-body" style="justify-content: center;">
               <h6 style="text-align: center;" class="card-title">A Tenda da Cultura e A Tenda da Cultura Infantil</h6>  
           </div>
@@ -191,7 +191,7 @@
         </div> 
   
         <div class="card" style="width: 18rem;">
-          <img class="card-img-top" src="img/biblioteca.JPG" alt="Card image cap">
+          <img class="card-img-top" src="img/biblioteca.jpg" alt="Card image cap">
             <div class="card-body" style="justify-content: center;">
               <h6 style="text-align: center;" class="card-title">A Biblioteca</h6>  
           </div>
@@ -201,7 +201,7 @@
         </div>
   
         <div class="card" style="width: 18rem;">
-          <img class="card-img-top" src="img/mapoteca.JPG" alt="Card image cap">
+          <img class="card-img-top" src="img/mapoteca.jpg" alt="Card image cap">
             <div class="card-body" style="justify-content: center;">
               <h6 style="text-align: center;" class="card-title">Mapoteca</h6>  
           </div>
@@ -213,7 +213,7 @@
 
       <div class="col-sm-12" style="display: flex; flex-direction: row; justify-content: space-around; padding-bottom: 3%;">
         <div class="card" style="width: 18rem;">
-          <img class="card-img-top" src="img/soninhodobebe.JPG" alt="Card image cap">
+          <img class="card-img-top" src="img/soninhodobebe.jpg" alt="Card image cap">
             <div class="card-body" style="justify-content: center;">
               <h6 style="text-align: center;" class="card-title">Soninho do bebê</h6>  
           </div>
@@ -223,7 +223,7 @@
         </div>
   
         <div class="card" style="width: 18rem;">
-          <img class="card-img-top" src="img/omundodacrianca.JPG" alt="Card image cap">
+          <img class="card-img-top" src="img/omundodacrianca.jpg" alt="Card image cap">
             <div class="card-body" style="justify-content: center;">
               <h6 style="text-align: center;" class="card-title">O Mundo da Criança</h6>  
           </div>
@@ -233,7 +233,7 @@
         </div> 
   
         <div class="card" style="width: 18rem;">
-          <img class="card-img-top" src="img/brinquedoteca.JPG" alt="Card image cap">
+          <img class="card-img-top" src="img/brinquedoteca.jpg" alt="Card image cap">
             <div class="card-body" style="justify-content: center;">
               <h6 style="text-align: center;" class="card-title">Brinquedoteca Infantil</h6>  
           </div>
@@ -245,7 +245,7 @@
 
       <div class="col-sm-12" style="display: flex; flex-direction: row; justify-content: space-around;">
         <div class="card" style="width: 18rem;">
-          <img class="card-img-top" src="img/quatropilares.JPG" alt="Card image cap">
+          <img class="card-img-top" src="img/quatropilares.jpg" alt="Card image cap">
             <div class="card-body">
               <h6 style="text-align: center;" class="card-title">Quatro Pilares da Educação</h6>  
               
