Acentuação em "importância" e remoção de espaço entre ":"

--- a/robotica.html
+++ b/robotica.html
@@ -196,7 +196,7 @@
               <h1 class="display-6 mb-5"></h1>
 
               <p class="fs-5 text-primary mb-4">
-                Importancia :
+                Importância:
               </p>
               <p class="mb-4" Align="justify">
                 Aprender a ler, escrever e resolver operaçõesmatemáticas, são habilidades essenciais e que devem ser estimuladas nas crianças. Através da expansão dos meios digitais, a utilização de ferramentas como a robótica podem potencializar o desenvolvimento dessas aptidões, e já nao é mais novidade que muitas escolas em diversos paíeses incluíram o uso da tecnologia em sua grade curricular, tornando o processor de ensino aprendizagem mais moderno e eficiente.
