Correções ortográficas na página de robótica.

--- a/robotica.html
+++ b/robotica.html
@@ -199,7 +199,7 @@
                 Importância:
               </p>
               <p class="mb-4" Align="justify">
-                Aprender a ler, escrever e resolver operaçõesmatemáticas, são habilidades essenciais e que devem ser estimuladas nas crianças. Através da expansão dos meios digitais, a utilização de ferramentas como a robótica podem potencializar o desenvolvimento dessas aptidões, e já nao é mais novidade que muitas escolas em diversos paíeses incluíram o uso da tecnologia em sua grade curricular, tornando o processor de ensino aprendizagem mais moderno e eficiente.
+                Aprender a ler, escrever e resolver operações matemáticas, são habilidades essenciais e devem ser estimuladas nas crianças. Através da expansão dos meios digitais, a utilização de ferramentas como a robótica podem potencializar o desenvolvimento dessas aptidões, e já não é mais novidade que muitas escolas em diversos países incluíram o uso da tecnologia em sua grade curricular, tornando o processo de ensino aprendizagem mais moderno e eficiente.
               </p>
             </div>
           </div>
@@ -215,16 +215,14 @@
                 Itens:
               </p>
               <p class="mb-4" Align="justify">
-                Projetos montaveis compostos por centenas de peças ( metal e plásticos), cronograma para o professor, curso de programaçao e robótica, software específico, livros do aluno e livros específicos do professor.
+                Projetos montáveis compostos por centenas de peças (metal e plásticos), cronograma para o professor, curso de programação e robótica, software específico, livros do aluno e livros específicos do professor.
               </p>
 
               <p class="fs-5 text-primary mb-4">
                 Publico
               </p>
               <p class="mb-4" Align="justify">
-              Oferecemos 05 opções de laboratório, cada um direcioando a nivel de ensino(Ensino infantil,Fudamental I-A e B,Fundamental II e Ensino Médio), podendo atender por vez 01 grupoi de até 3 a 5 alunos.
-
-              Alem disso, temos a opção dos nossos 02 super laboratórios, um destinado ao Ensino Fundamental I e II, e o outro contemplando o Ensino Médio, ambos atendem por vez 01 grupo de até 40 anos.
+                Oferecemos 05 opções de laboratório, cada um direcionado ao nível de ensino (Ensino infantil. Fundamental I - A e B, Fundamental II e Ensino Médio), podendo atender por vez 01 grupo de até 3 a 5 alunos. Além disso, temos a opção dos nossos 02 super laboratórios, um destinado ao Ensino Fundamental I e II, e o outro contemplando o Ensino Médio, ambos atendem por vez 01 grupo de até 40 anos.
               </p>
 
             </div>
