Correões ortográficas de matemática.

--- a/matematica.html
+++ b/matematica.html
@@ -200,7 +200,7 @@
                 Importancia:
               </p>
               <p class="mb-4" Align="justify">
-                A Matemática está presente em nossas vidas desde os primórdios do surgimento do homem, sendo fundamental no funcionamento e organização de quase tudo ao nosso redor, tendo como elementos os números, medidas, figuras geometricas e outros conceitos inerentes a essa disciplina.
+                A Matemática está presente em nossas vidas desde os primórdios do surgimento do homem, sendo fundamental no funcionamento e organização de quase tudo ao nosso redor, tendo como elementos os números, medidas, figuras geométricas e outros conceitos inerentes a essa disciplina.
               </p>
             </div>
           </div>
@@ -216,14 +216,14 @@
                 Itens:
               </p>
               <p class="mb-4" Align="justify">
-                Apostila completa com metodologia de aplicãção dos materiais, jogos pedagógicos, mosaicos, figuras para alfabetização em EVA, quadro magnético, cubos de encaixe, abacós, livros específicos para o professor e aluno, e muito mais.
+                Apostila completa com metodologia de aplicação dos materiais, jogos pedagógicos, mosaicos, figuras para alfabetização em EVA, quadro magnético, cubos de encaixe, ábacos, livros específicos para o professor e aluno, e muito mais.
               </p>
 
               <p class="fs-5 text-primary mb-4">
                 Publico
               </p>
               <p class="mb-4" Align="justify">
-             Oferecemos 04 modelos de laboratório indicidualmente direcionados a uma fase do ensino, são elas: Infantil, fucamental I e II e Ensino Médio.
+                Oferecemos 04 modelos de laboratório individualmente direcionados a uma fase do ensino, são elas: infantil, fundamental, I e II e Ensino Médio.
               </p>
 
             </div>
