Correções ortográficas de ciencia

--- a/ciencia.html
+++ b/ciencia.html
@@ -197,10 +197,10 @@
               <h1 class="display-6 mb-5"></h1>
 
               <p class="fs-5 text-primary mb-4">
-                Importancia :
+                Importancia:
               </p>
               <p class="mb-4" Align="justify">
-                O estudo das ciências proporciona ao aluno o entendimento dos fenomenos do universo, levando-o a navegar pelos ambientos macro e microscópios presentes tanto ao nosso redor, quanto dentro dos organismos existentes. Entender a natureza e os seus acontecimentos, assim como os seres que vivem dela, é ter a oportunidade de ampliar o seu horizonte de conhecimento sobre o universo.
+                O estudo das ciências proporciona ao aluno o entendimento dos fenômenos do universo, levando-o a navegar pelos ambientes macro e microscópios presentes tanto ao nosso redor, quanto dentro dos organismos existentes. Entender a natureza e os seus acontecimentos, assim como os seres que vivem dela, é ter a oportunidade de ampliar o seu horizonte de conhecimento sobre o universo.
               </p>
             </div>
           </div>
@@ -216,7 +216,7 @@
                 Itens:
               </p>
               <p class="mb-4" Align="justify">
-                Mapas e peças de exposição do corpo humano, materias para estudo prático das reaçôes químicas e físicas, ferramentas para o estudo da microbiologia, cadernos de atividade para os alunos e cadernos específicos do professor.
+                Mapas e peças de exposição do corpo humano, matérias para estudo prático das reações químicas e físicas, ferramentas para o estudo da microbiologia, cadernos de atividade para os alunos e cadernos específicos do professor.
               </p>
 
               <p class="fs-5 text-primary mb-4">
