Correções ortográficas de inclusao

--- a/inclusao.html
+++ b/inclusao.html
@@ -197,10 +197,10 @@
               <h1 class="display-6 mb-5"></h1>
 
               <p class="fs-5 text-primary mb-4">
-                Importancia :
+                Importância:
               </p>
               <p class="mb-4" Align="justify">
-                O Programa educacional destinado ao trabalho de inclsão social, disponibiliza para os educadores um amplo acervo de rescursos pedagógicos, adaptados para atender aos alunos com necessidades especiais e servindo como guia no manejo do processo de ensino-aprendizagem dessas crianças, jovens e adultos.
+                O Programa educacional destinado ao trabalho de inclusão social, disponibiliza para os educadores um amplo acervo de recursos pedagógicos, adaptados para atender aos alunos com necessidades especiais e servindo como guia no manejo do processo de ensino-aprendizagem dessas crianças, jovens e adultos.
               </p>
             </div>
           </div>
@@ -216,14 +216,14 @@
                 Itens:
               </p>
               <p class="mb-4" Align="justify">
-                Briquedos pedagógicos, livros técnicos com suporte especifico para professores, psicopedagogos e educadores, livros falados, painel em libras, livros impressos em letra ampliadas e mais.
+                Brinquedos pedagógicos, livros técnicos com suporte especifico para professores, psicopedagogos e educadores, livros falados, painel em libras, livros impressos em letra ampliadas e mais.
               </p>
 
               <p class="fs-5 text-primary mb-4">
                 Publico
               </p>
               <p class="mb-4" Align="justify">
-              Atende alunos apartir de 2 anos.
+              Atende alunos a partir de 2 anos.
               </p>
 
             </div>
