--- a/ciencia.html
+++ b/ciencia.html
@@ -197,7 +197,7 @@
               <h1 class="display-6 mb-5"></h1>
 
               <p class="fs-5 text-primary mb-4">
-                Importancia:
+                Importância:
               </p>
               <p class="mb-4" Align="justify">
                 O estudo das ciências proporciona ao aluno o entendimento dos fenômenos do universo, levando-o a navegar pelos ambientes macro e microscópios presentes tanto ao nosso redor, quanto dentro dos organismos existentes. Entender a natureza e os seus acontecimentos, assim como os seres que vivem dela, é ter a oportunidade de ampliar o seu horizonte de conhecimento sobre o universo.
