--- a/matematica.html
+++ b/matematica.html
@@ -197,7 +197,7 @@
               <h1 class="display-6 mb-5"></h1>
 
               <p class="fs-5 text-primary mb-4">
-                Importancia:
+                Importância:
               </p>
               <p class="mb-4" Align="justify">
                 A Matemática está presente em nossas vidas desde os primórdios do surgimento do homem, sendo fundamental no funcionamento e organização de quase tudo ao nosso redor, tendo como elementos os números, medidas, figuras geométricas e outros conceitos inerentes a essa disciplina.
