Correção ortográfica nos textos de cultura

--- a/cultura.html
+++ b/cultura.html
@@ -197,10 +197,10 @@
               <h1 class="display-6 mb-5"></h1>
 
               <p class="fs-5 text-primary mb-4">
-                Importancia :
+                Importância:
               </p>
               <p class="mb-4" Align="justify">
-               Os projetos apresentam como foco principal atingir aqueles que sofrem com a carência de informação e dificuldades no acesso à leitura. Através do programa "A tenda da Cultura", é possivel criar ações itinerantes com objetivos sociais, educacionais, culturais e inclusivos, principalmente pela viabilidade que o projeto tem de atingir áreas e comunidades rurais, levando conhecimento e informação.
+              Os projetos apresentam como foco principal atingir aqueles que sofrem com a carência de informação e dificuldades no acesso à leitura. Através do programa "A tenda da Cultura", é possível criar ações itinerantes com objetivos sociais, educacionais, culturais e inclusivos, principalmente pela viabilidade que o projeto tem de atingir áreas e comunidades rurais, levando conhecimento e informação.
               </p>
             </div>
           </div>
@@ -216,11 +216,8 @@
                 Itens:
               </p>
               <p class="mb-4" Align="justify">
-                A Tenda da Cultura ( Todas as Idades): 01 tenda pantográfica, mesas, cadeiras (infantis e adultas), livros diversos, como: obras direcionadas a concursos públicos, atlas, paradidáticos de literatura, livros infantis, infanto-juvenis, briquedos e jogos pedagógicos.
-
-                A Tenda da Cultura (Ifantil): 01 tenda inflável colorida, livros infantis, parque infantil, mesas e cadeiras (infantis e adultas), briquedos, jogos pedagógicos e puffs infláveis.
-
-                <p class="fs-5 text-primary mb-4">
+                Oferecemos 02 possibilidades de estrutura para o projeto" a Tenda da Cultura", um direcionado ao Ensino Infantil e outro contemplando todas as idades.
+              <p class="fs-5 text-primary mb-4">
                 Publico
               </p>
               <p class="mb-4" Align="justify">
