Correções ortográficas da mapoteca

--- a/mapoteca.html
+++ b/mapoteca.html
@@ -198,11 +198,10 @@
               <h1 class="display-6 mb-5"></h1>
 
               <p class="fs-5 text-primary mb-4">
-                Importancia :
+                Importância:
               </p>
               <p class="mb-4" Align="justify">
-                Durante o ensino, quanto maiores forem as opções pedagógicas disponiveis, mais fácil e fluido será o processo de aprendizagem. Ter a oportunidade de visualizar o conteúdo muito além de possibilitar na prática a identificação dos assuntos de forma direta e visual.
-              </p>
+                Durante o ensino, quanto maiores forem as opções pedagógicas disponíveis, mais fácil e fluido será o processo de aprendizagem. Ter a oportunidade de visualizar o conteúdo muito além de possibilitar na prática a identificação dos assuntos de forma direta e visual.              </p>
             </div>
           </div>
 
