Correção na diagramação

--- a/contact.html
+++ b/contact.html
@@ -161,16 +161,9 @@
       </div>
     </nav>
 
-    <div
-      class="container-fluid page-header py-5 mb-5 wow fadeIn"
-      data-wow-delay="0.1s"
-    >
-      <div class="container py-5">
+    <div class="container-xxl" style="padding-top: 1.5rem !important;">
+      <div class="container">
         <h1 class="display-4 animated slideInDown mb-4">Entre em contato conosco!</h1>
-        <nav aria-label="breadcrumb animated slideInDown">
-          <ol class="breadcrumb mb-0">
-          </ol>
-        </nav>
       </div>
     </div>
 
