--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
           <div class="carousel-item active">
             <img class="w-100" src="img/principal1.jpg" alt="Image" />
             <div class="carousel-caption">
-              <div class="container">
+              <div class="container" style="margin-top: 12%;">
                 <div class="row">
                   <div class="col-12 col-lg-6">
                     <h1 class="display-3 text-dark mb-4 animated slideInDown">
@@ -436,7 +436,9 @@
                   </div>
 
                   <div class="col-lg-4">
-                    <img style="width: 70%;" src="img/mapa.jpg" alt="">
+                    <div style="justify-content: center; align-items: center; display: flex;">
+                      <img style="width: 70%;" src="img/mapa.jpg" alt="">  
+                    </div>
                   </div>
                 </div>  
             </div>
@@ -444,6 +446,7 @@
       </div>
     </div>
     
+    <!--
     <div class="container-xxl py-5">
       <div class="container">
         <div class="text-center mx-auto" style="max-width: 500px">
@@ -537,6 +540,7 @@
         </div>
       </div>
     </div>
+    -->
 
     <div
       class="container-fluid py-5 wow fadeIn"
@@ -551,7 +555,7 @@
                       Nosso parceiro
                     </h1>
 
-                    <p class="text-white mb-5">
+                    <p class="text-white text-center mb-5">
                       Navegue no site do nosso parceiro para saber mais!
                     </p>
 
@@ -561,9 +565,10 @@
                   </div>
 
                   <div class="col-lg-4">
-                    <img style="width: 70%;" src="img/coopedu.png" alt="">
+                    <div style="justify-content: center; align-items: center; display: flex;">
+                      <img style="width: 70%;" src="img/coopedu.png" alt="">  
+                    </div>
                   </div>
-
                 </div>  
             </div>
           </div>
