--- a/about.html
+++ b/about.html
@@ -162,20 +162,11 @@
       </div>
     </nav>
 
-    <div
-      class="container-fluid page-header py-5 mb-5 wow fadeIn"
-      data-wow-delay="0.1s"
-    >
-      <div class="container py-5">
-        <h1 class="display-4 animated slideInDown mb-4">Sobre a Feeling</h1>
-        <nav aria-label="breadcrumb animated slideInDown">
-          <ol class="breadcrumb mb-0"></ol>
-        </nav>
-      </div>
-
+    <div class="container" style="padding-top: 1.5rem !important;">
+      <h1 class="display-4 animated slideInDown mb-4">Sobre a Feeling</h1>
     </div>
 
-    <div class="container-xxl py-5">
+    <div class="container-xxl" style="padding-bottom: 3rem !important;">
       <div class="container">
         <div class="row g-5">
 
