--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
       <div class="container facts px-lg-0">
         <div class="row g-0 mx-lg-0">
           <div class="col-lg-6 facts-text wow fadeIn" data-wow-delay="0.1s">
-            <div class="h-100 px-4 ps-lg-0">
+            <div class="px-4 ps-lg-0" style="display: flex; flex-direction: column; justify-content: center;">
               <h1 class="mb-4" style="color: #3B5489;">Buscamos no resultado a excelência!</h1>
               <p class="mb-5" align="justify" style="color: #3B5489;">
                 Espalhados pelos Brasil, nossa equipe carrega uma grande responsabilidade no peito, oferecer as melhores soluções pedagógicas para o desenvolvimento de uma educação de qualidade.
@@ -287,7 +287,7 @@
             </div>
           </div>
           <div class="col-lg-6 facts-counter wow fadeIn" data-wow-delay="0.5s">
-            <div class="h-100 px-4 pe-lg-0">
+            <div class="px-4 pe-lg-0" style="display: flex; flex-direction: column; justify-content: center;">
               <div class="row g-5">
 
                 <div class="col-sm-6">
