Correções ortográficas do mundo

--- a/mundo.html
+++ b/mundo.html
@@ -197,10 +197,10 @@
               <h1 class="display-6 mb-5"></h1>
 
               <p class="fs-5 text-primary mb-4">
-                Importancia :
+                Importâcia:
               </p>
               <p class="mb-4" Align="justify">
-                O objetico do projeto é dar inicio, ainda que nas primeiras fases do aprendizado, ao desenvolvimento da leitura pelas crianças. Utilizando de uma metodologia pautada na ação, os nosso materias proporcionam uma maior interação dos pequenos, que podem manuserar e se divertir com os livros de pano, dedoches e livros 3D, gerando uma maior dinâmica para o professor e maior interesse dos alunos, além de influenciar diretamente no desenvolvimento do raciocínio lógico e coordenação motora.
+                O objetivo do projeto é dar início, ainda que nas primeiras fases do aprendizado, ao desenvolvimento da leitura pelas crianças. Utilizando de uma metodologia pautada na ação, os nossos materiais proporcionam uma maior interação dos pequenos, que podem manusear e se divertir com os livros de pano, "dedoches" e livros 3D, gerando uma maior dinâmica para o professor e maior interesse dos alunos, além de influenciar diretamente no desenvolvimento do raciocínio lógico e coordenação motora.
               </p>
             </div>
           </div>
@@ -216,8 +216,7 @@
                 Itens:
               </p>
               <p class="mb-4" Align="justify">
-                São 140 livros, confeccionados com materias que proporcionam uma maior interação do aluno com o objetivo(livro), tendo como propósito a ação da leitura como forma de aprendizagem, socialização e interação. Garantimos também dentro do projeto o encio de um baú destinado a organizaçao do material.
-              </p>
+                São 140 livros, confeccionados com materiais que proporcionam uma maior interação do aluno com o objetivo (livro), tendo como propósito a ação da leitura como forma de aprendizagem, socialização e interação. Garantimos também dentro do projeto o envio de um baú destinado à organização do material.              </p>
 
               <p class="fs-5 text-primary mb-4">
                 Publico
