Correções ortográficas de brinquedo

--- a/brinquedo.html
+++ b/brinquedo.html
@@ -197,10 +197,10 @@
               <h1 class="display-6 mb-5"></h1>
 
               <p class="fs-5 text-primary mb-4">
-                Importancia :
+                Importância:
               </p>
               <p class="mb-4" Align="justify">
-                Quando misturamos brincadeira com aprendizado fica difícil não querer participar, ainda mais quando falamos de crianças, cheias de energia para gastar. Com o nosso programa "Brinquedoteca Infatil", oferecemos os materiasi necessários para tornar a sua aula uma grande brincadeira educativa. Através dos nossos 160 livros infantis (acompanha baú), somados aos 11 brindes direcionados a montagem do parquinho infantil. você terá nas mãos grandes ferramentas do processo de ensino-aprendizagem.
+                Quando misturamos brincadeira com aprendizado fica difícil não querer participar, ainda mais quando falamos de crianças, cheias de energia para gastar. Com o nosso programa "Brinquedoteca Infantil", oferecemos os materiais necessários para tornar a sua aula uma grande brincadeira educativa. Através dos nossos 160 livros infantis (acompanha baú), somados aos 11 brindes direcionados a montagem do parquinho infantil. Você terá nas mãos grandes ferramentas do processo de ensino-aprendizagem.
               </p>
             </div>
           </div>
@@ -216,7 +216,7 @@
                 Itens:
               </p>
               <p class="mb-4" Align="justify">
-                160 livros infantis, entre eles: Livros pop-ups, livros de banho, livros de dedoche, livros com textura, entre outros, Acompanha também 11 brindes direcionados a montagem do parquinho infantil.
+                160 livros infantis, entre eles: livros pop-ups, livros de banho, livros de dedoche, livros com textura, entre outros. Acompanha também 11 brindes direcionados a montagem do parquinho infantil.
               </p>
 
               <p class="fs-5 text-primary mb-4">
