--- a/pilares.html
+++ b/pilares.html
@@ -167,7 +167,7 @@
       data-wow-delay="0.1s"
     >
       <div class="container py-5">
-        <h1 class="display-4 animated slideInDown mb-4">Quato Pilares da Educação</h1>
+        <h1 class="display-4 animated slideInDown mb-4">Quatro Pilares da Educação</h1>
         <nav aria-label="breadcrumb animated slideInDown">
           <ol class="breadcrumb mb-0">
           </ol>
@@ -197,12 +197,10 @@
               <h1 class="display-6 mb-5"></h1>
 
               <p class="fs-5 text-primary mb-4">
-                Importancia :
+                Importância:
               </p>
               <p class="mb-4" Align="justify">
-                O programa "Quatro Pilares da Educação" tem como objetivo possibilitar o acesso ao conhecimento por parte do aluno, permitindo que o educador traga para ao ambiente escolar diversos temas de interesse acadêmico, social e lazer, servindo como oportunidade para que os alunos possam dar voz às dúvidas e a sua visão de mundo, alcançando o plano desenvolvimento do educador e convidando o jovem a se aventurar no mundo dos livros.
-
-                Toda a Organização pedagógica do projeto se basei no desenvolvimento de habilidades que compõem os 4 pilares da educação: Aprender, Fazer, Ser e Conviver.
+                O programa "Quatro Pilares da Educação" visa possibilitar o acesso ao conhecimento por parte do aluno, permitindo que o educador traga para ao ambiente escolar diversos temas de interesse acadêmico, social e lazer, servindo como oportunidade para que os alunos possam dar voz às dúvidas e a sua visão de mundo, alcançando o plano desenvolvimento do educador e convidando o jovem a se aventurar no mundo dos livros. Toda a Organização pedagógica do projeto se basei no desenvolvimento de habilidades que compõem os 4 pilares da educação: Aprender, Fazer, Ser e Conviver.
               </p>
             </div>
           </div>
@@ -218,7 +216,7 @@
                 Itens:
               </p>
               <p class="mb-4" Align="justify">
-                O programa contém cerca de 280 títulos, divididos entre: obras de referência, multimatérias e literatura. Além disso, somado a esse incrivel acervo, nosso projeto acompanha fantasias, dedoches e fantoches, materiais que auxiliam os educadores no processo de ensino.
+                O programa contém cerca de 280 títulos, divididos entre: obras de referência, multi-matérias e literatura. Além disso, somado a esse incrível acervo, nosso projeto acompanha fantasias, "dedoches" e fantoches, materiais que auxiliam os educadores no processo de ensino.
               </p>
 
               <p class="fs-5 text-primary mb-4">
