--- a/index.html
+++ b/index.html
@@ -414,8 +414,8 @@
     </div>
 
     <div
-      class="container-fluid my-5 py-5 wow fadeIn"
-      style="background-color: #2c4985;"
+      class="container-fluid py-5 wow fadeIn"
+      style="background-color: #2c4985; margin-bottom: 0.2rem !important;"
       data-wow-delay="0.1s">
       <div class="container py-3">
           <div class="row g-5">
@@ -437,7 +437,7 @@
 
                   <div class="col-lg-4">
                     <div style="justify-content: center; align-items: center; display: flex;">
-                      <img style="width: 70%;" src="img/mapa.jpg" alt="">  
+                      <img style="width: 70%;" src="img/mapa.jpg" alt="Mapa do Brasil em azul">  
                     </div>
                   </div>
                 </div>  
@@ -566,7 +566,7 @@
 
                   <div class="col-lg-4">
                     <div style="justify-content: center; align-items: center; display: flex;">
-                      <img style="width: 70%;" src="img/coopedu.png" alt="">  
+                      <img style="width: 100%;" src="img/coopeduLogo.png" alt="Logo da Coopeedu">  
                     </div>
                   </div>
                 </div>  
