Espaço entre logo coopedu e botão de redirecionamento.

--- a/index.html
+++ b/index.html
@@ -563,7 +563,7 @@
                       <a href="https://coopedu.com.br/" class="align-self-start btn btn-secondary py-3 px-5" target="_blank">CoopEdu</a> 
                     </div>
                   </div>
-
+                  <div>&nbsp;</div> 
                   <div class="col-lg-4">
                     <div style="justify-content: center; align-items: center; display: flex;">
                       <img style="width: 100%;" src="img/coopeduLogo.png" alt="Logo da Coopeedu">  
