--- a/index.html
+++ b/index.html
@@ -566,7 +566,7 @@
                   <div>&nbsp;</div> 
                   <div class="col-lg-4">
                     <div style="justify-content: center; align-items: center; display: flex;">
-                      <img style="width: 100%;" src="img/coopeduLogo.png" alt="Logo da Coopeedu">  
+                      <img style="width: 100%; align-items: center;" src="img/coopeduLogo.png" alt="Logo da Coopeedu">  
                     </div>
                   </div>
                 </div>  
