--- a/index.html
+++ b/index.html
@@ -251,8 +251,7 @@
             >
               <img
                 class="position-absolute w-100 h-100"
-                src="img/saibamais.jpg"
-                alt=""
+                src="img/saibamais.png" alt=""
                 style="object-fit: cover"/>
             </div>
           </div>
