--- a/mapas.html
+++ b/mapas.html
@@ -169,15 +169,8 @@
     </nav>
 
     <!-- Page Header Start -->
-    <div
-      class="container-fluid page-header mb-5 wow fadeIn" style="padding-top: 3rem !important;"
-      data-wow-delay="0.1s"
-    >
-      <div class="container py-5">
-        <h1 class="display-4 animated slideInDown mb-4">Mapa de Consultores</h1>
-        <nav aria-label="breadcrumb animated slideInDown">
-        </nav>
-      </div>
+    <div class="container" style="padding-top: 1.5rem !important;">
+      <h1 class="display-4 animated slideInDown mb-4">Mapa de Consultores</h1>
     </div>
     <!-- Page Header End -->
 
