--- a/mapas.html
+++ b/mapas.html
@@ -320,9 +320,30 @@
           fill: #5a95ce;
       }
     </style>
-
-    <div style="display: inline-grid; justify-content: center; width: 100%;">
-      <svg id="map" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" height="465" style="display: inline;">
+<!-- 
+Diagramação do Mapa de Consultores
+-->
+<style>
+.scalar-div{
+  position: relative; 
+  height:0; 
+  width: 100%; 
+  padding: 0;
+  padding-bottom: 100%; 
+}
+.escalar-svg {
+  position: absolute; 
+  height: 100%; 
+  width: 100%; 
+  left: 0; 
+  top:0;
+}
+</style>
+<!-- 
+Fimm diagramação
+-->
+    <div style="escalar-div">
+      <svg id="map" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" height="465" style="escalar-svg">
 
         <g class="model-green">
 
