--- a/mapas.html
+++ b/mapas.html
@@ -324,7 +324,7 @@
 Diagramação do Mapa de Consultores
 -->
 <style>
-.scalar-div{
+.escalar-div{
   position: relative; 
   height:0; 
   width: 100%; 
@@ -342,10 +342,10 @@ Diagramação do Mapa de Consultores
 <!-- 
 Fimm diagramação
 -->
-    <div style="escalar-div">
-      <svg id="map" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" height="465" style="escalar-svg">
+    <div class="escalar-div" style="display: inline-grid; justify-content: center; width: 100%;">
+      <svg class="escalar-div" id="map" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" height="465" style="display: inline;">
 
-        <g class="model-green">
+        <g class="model-orange">
 
           <desc>Brasil</desc>
 
