--- a/mapas.html
+++ b/mapas.html
@@ -343,7 +343,7 @@ Diagramação do Mapa de Consultores
 Fimm diagramação
 -->
     <div class="escalar-div" style="display: inline-grid; justify-content: center; width: 100%;">
-      <svg class="escalar-div" id="map" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" height="465" style="display: inline;">
+      <svg class="escalar-svg" id="map" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" height="465" style="display: inline;">
 
         <g class="model-orange">
 
