--- a/mapas.html
+++ b/mapas.html
@@ -342,8 +342,8 @@ Diagramação do Mapa de Consultores
 <!-- 
 Fimm diagramação
 -->
-    <div class="escalar-div" style="display: inline-grid; justify-content: center; width: 100%;">
-      <svg class="escalar-svg" id="map" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" height="465" style="display: inline;">
+    <div>
+      <svg class="escalar-svg" id="map" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="opx" y="0px" width="auto" height="auto" viewBox="0 0 450 460";">
 
         <g class="model-orange">
 
