--- a/mapas.html
+++ b/mapas.html
@@ -343,7 +343,7 @@ Diagramação do Mapa de Consultores
 Fimm diagramação
 -->
     <div>
-      <svg class="escalar-svg" id="map" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="opx" y="0px" width="auto" height="auto" viewBox="0 0 450 460";>
+      <svg id="map" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="opx" y="0px" viewBox="0 0 450 460";>
 
         <g class="model-orange">
 
