--- a/mapas.html
+++ b/mapas.html
@@ -323,27 +323,11 @@
 <!-- 
 Diagramação do Mapa de Consultores
 -->
-<style>
-.escalar-div{
-  position: relative; 
-  height:0; 
-  width: 100%; 
-  padding: 0;
-  padding-bottom: 100%; 
-}
-.escalar-svg {
-  position: absolute; 
-  height: 100%; 
-  width: 100%; 
-  left: 0; 
-  top:0;
-}
-</style>
 <!-- 
 Fimm diagramação
 -->
-    <div>
-      <svg id="map" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="opx" y="0px" viewBox="0 0 450 460";>
+    <div class="escalar-div" style="display: inline-grid; justify-content: center; width: 100%;">
+      <svg class="escalar-svg" id="map" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" height="465" style="display: inline;">
 
         <g class="model-orange">
 
