--- a/mapas.html
+++ b/mapas.html
@@ -178,7 +178,10 @@
 
       @media only screen and (min-width : 200px) {
         #map{
-          width: 400px;
+          x="0px" 
+          y="0px" enable-background="new 0 0 450 460" 
+          xml:space="preserve" 
+          viewBox="0 0 450 460">
         }
       }
 
@@ -327,7 +330,7 @@ Diagramação do Mapa de Consultores
 Fimm diagramação
 -->
     <div class="escalar-div" style="display: inline-grid; justify-content: center; width: 100%;">
-      <svg class="escalar-svg" id="map" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" height="465" style="display: inline;">
+      <svg id="map" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" height="465" style="display: inline;">
 
         <g class="model-orange">
 
