Commit change mapas

--- a/mapas.html
+++ b/mapas.html
@@ -173,18 +173,18 @@
       <h1 class="display-4 animated slideInDown mb-4">Mapa de Consultores</h1>
     </div>
     <!-- Page Header End -->
-
-    <style type="text/css">
+<!--
+    
 
       @media only screen and (min-width : 200px) {
         #map{
           x="0px" 
-          y="0px" enable-background="new 0 0 450 460" 
+          y="0px" 
+          enable-background="new 0 0 450 460" 
           xml:space="preserve" 
           viewBox="0 0 450 460">
         }
       }
-
       @media only screen and (min-width : 320px) {
         #map{
           width: 400px;
@@ -208,7 +208,8 @@
           width: 458px;
         }
       }
-
+-->
+    <style type="text/css">
       #map {
         display: none;
       }
