Responsive size map

--- a/mapas.html
+++ b/mapas.html
@@ -183,7 +183,7 @@
         #svg-map .circle { fill:#66ccff }
         #svg-map a:hover .circle { fill:#003399 !important; cursor:pointer }
       </style>
-      <svg version="1.1" id="svg-map" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="450px" viewBox="0 0 450 460" enable-background="new 0 0 450 460">
+      <svg version="1.1" id="svg-map" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" y="0px" viewBox="0 0 450 460" enable-background="new 0 0 450 460">
         <g>
           <a xlink:href="#tocantins">
           <title>Tocantins</title>
