--- a/mapas.html
+++ b/mapas.html
@@ -353,7 +353,7 @@
             c-8.601-4.381-16.61-8.981-26.088-11.05c-10.282-2.259-20.635-4.793-29.878-10.011C4.121,145.766,12.433,144.779,10.078,136.412z"></path>
             <text transform="matrix(1 0 0 1 98.1406 119.0591)" fill="#FFFFFF">AM</text>
           </a>
-          <a xlink:href="#acre" onclick="preencerLateral('acre')">
+          <a xlink:href="#acre" onclick="preencerLateral('ac')">
           <title>Acre</title>
             <path stroke="#FFFFFF" stroke-width="1.0404" stroke-linecap="round" stroke-linejoin="round" d="M3.656,148.545
             c12.557,7.544,27.524,8.367,41.082,13.2c12.802,8.065,27.278,12.845,40.616,19.872c-2.834,1.205-7.587,4.382-9.983,6.395
