--- a/about.html
+++ b/about.html
@@ -172,8 +172,8 @@
 
           <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s">
             <div
-              class="position-relative overflow-hidden rounded ps-5 h-100"
-              style="min-height: 500px">
+              class="position-relative overflow-hidden rounded h-100"
+              style="min-height: 200px">
               <img
                 class="position-absolute w-100 h-100"
                 src="img/quemsomos.jpg"
