Padronização do titulo

--- a/labs.html
+++ b/labs.html
@@ -167,12 +167,8 @@
       style="padding-top: 3rem !important"
       data-wow-delay="0.1s"
     >
-      <div class="container py-5">
-        <h1 class="display-4 animated slideInDown mb-4">Laboratórios</h1>
-        <nav aria-label="breadcrumb animated slideInDown">
-          <ol class="breadcrumb mb-0"></ol>
-        </nav>
-      </div>
+    <div class="container" style="padding-top: 1.5rem !important;">
+      <h1 class="display-4 animated slideInDown mb-4">Laboratórios</h1>
     </div>
 
     <div
