--- a/labs.html
+++ b/labs.html
@@ -164,7 +164,7 @@
 
     <div
       class="container-fluid page-header wow fadeIn"
-      style="padding-top: 3rem !important"
+      style="padding-top: !important"
       data-wow-delay="0.1s"
     >
     <div class="container" style="padding-top: 1.5rem !important;">
