Correção de padding de título

--- a/projs.html
+++ b/projs.html
@@ -168,9 +168,8 @@
       data-wow-delay="0.1s"
     >
     <div class="container" style="padding-top: 1.5rem !important;">
-      <h1 class="display-4 animated slideInDown mb-4">projetos Pedagógicos/h1>
+      <h1 class="display-4 animated slideInDown mb-4">Projetos Pedagógicos</h1>
     </div>
-
     <div
       class="container-fluid page-header wow fadeIn"
       data-wow-delay="0.1s", style="padding-bottom: 1.5rem;"
